manifests/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lucky-dashboard
  namespace: web
  labels:
    app: lucky-dashboard
spec:
  replicas: 4
  selector:
    matchLabels:
      app: lucky-dashboard
  template:
    metadata:
      labels:
        app: lucky-dashboard
    spec:
      containers:
        - name: site
          image: lucky-dashboard:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
