manifests/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lucky-dashboard-svc
  namespace: web
  labels:
    app: lucky-dashboard
spec:
  selector:
    app: lucky-dashboard
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
