manifests/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lucky-dashboard-ingress
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lucky-dashboard.local
      secretName: lucky-dashboard-tls
  rules:
    - host: lucky-dashboard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lucky-dashboard-svc
                port:
                  number: 80
